Q-tables initialization randomly set to -1 to 1 but SQL and SDQL initiliazation to zero

--- a/hybrids.ipynb
+++ b/hybrids.ipynb
@@ -55,7 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def evaluate_policy(env, q_table, episodes=10):\n",
     "    \"\"\"Evaluate the Q-learning agent for a certain number of episodes and return average reward and steps.\"\"\"\n",
     "    total_reward, total_length = 0, 0\n",
@@ -103,14 +102,16 @@
     "\n",
     "def initialize_Q_values(state_space, action_space):\n",
     "    \"\"\"Initialize Q-values for A and B with all zeros, except terminal states set to zero.\"\"\"\n",
-    "    Q_A = np.random.rand(state_space, action_space)\n",
-    "    Q_B = np.random.rand(state_space, action_space)\n",
+    "    # Q_A = np.random.rand(state_space, action_space)\n",
+    "    # Q_B = np.random.rand(state_space, action_space)\n",
+    "    Q_A = np.zeros((state_space, action_space))\n",
+    "    Q_B = np.zeros((state_space, action_space))\n",
     "    # Assume terminal state is the last state for simplicity\n",
     "    Q_A[-1, :] = 0\n",
     "    Q_B[-1, :] = 0\n",
     "    return Q_A, Q_B\n",
     "\n",
-    "def edited_speedy_double_q_learning(env, epsilon=1, min_epsilon=0.1, epsilon_decay=0.9999, T=100000, gamma=0.99, eval_interval=5000, eval_episodes=100):\n",
+    "def edited_speedy_double_q_learning(env, epsilon=1, min_epsilon=0.1, epsilon_decay=0.9999, T=100000, gamma=0.99, eval_interval=1000, eval_episodes=1):\n",
     "    state_space = env.observation_space.n\n",
     "    action_space = env.action_space.n\n",
     "\n",
@@ -159,16 +160,16 @@
     "            eta = 1 / (N_B[state, action] + 1)\n",
     "            a_star = np.argmax(Q_B_minus_1[next_state, :])\n",
     "            a_plus = np.argmax(Q_B[next_state, :])\n",
-    "\n",
-    "            T_kQ_B_minus_1 = (1 - eta) * Q_B_minus_1[state, action] + eta * (reward + gamma * Q_A_minus_1[next_state, a_star])\n",
+    "            T_kQ_B_minus_1 = (1 - eta) * Q_B_minus_1[state, action] + eta * (\n",
+    "                        reward + gamma * Q_A_minus_1[next_state, a_star])\n",
     "            T_kQ_B = (1 - eta) * Q_B[state, action] + eta * (reward + gamma * Q_A[next_state, a_plus])\n",
     "\n",
     "            Q_B_minus_1[state, action] = Q_B[state, action]\n",
-    "            Q_B[state, action] = (1 - alpha_B) * Q_B[state, action] + alpha_B * (k_B * T_kQ_B - (k_B - 1) * T_kQ_B_minus_1)\n",
+    "            Q_B[state, action] = (1 - alpha_B) * Q_B[state, action] + alpha_B * (\n",
+    "                        k_B * T_kQ_B - (k_B - 1) * T_kQ_B_minus_1)\n",
     "            N_B[state, action] += 1\n",
     "\n",
     "        state = next_state\n",
-    "\n",
     "\n",
     "        # Update counters and learning rates if needed\n",
     "        if np.min(N_A[mask]) > 0:\n",
@@ -185,14 +186,18 @@
     "            evaluation_rewards.append(avg_reward)\n",
     "            evaluation_lengths.append(avg_length)\n",
     "            evaluation_steps.append(t + 1)\n",
-    "            print(f\"Evaluation at step {t+1}: Avg Reward = {avg_reward}, Avg Length = {avg_length}\")\n",
+    "            print(f\"Evaluation at step {t + 1}: Avg Reward = {avg_reward}, Avg Length = {avg_length}\")\n",
     "        epsilon = max(min_epsilon, epsilon * epsilon_decay)  # Reduce epsilon\n",
     "        t += 1\n",
     "        if done:\n",
     "            state = env.reset()[0]\n",
     "    plot_metrics(evaluation_rewards, evaluation_lengths)\n",
     "    return Q_A\n",
-    "\n"
+    "\n",
+    "\n",
+    "Q_final = edited_speedy_double_q_learning(env)\n",
+    "print(\"Final Q-Table for A:\")\n",
+    "print(Q_final)"
    ]
   },
   {
