hybrid simple grid added

--- a/RL_SG.ipynb
+++ b/RL_SG.ipynb
@@ -1596,9 +1596,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training run 1\n",
+      "eval broke\n",
+      "Evaluation at step 2000: Avg Reward = 1.0, Avg Length = 6.0\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from typing import List, Tuple\n",
@@ -1704,28 +1714,23 @@
     "    state_space = env.observation_space.n\n",
     "    action_space = env.action_space.n\n",
     "\n",
-    "    Q_A = universal_initialize_q_table(state_space, action_space)\n",
-    "    Q_B = universal_initialize_q_table(state_space, action_space)\n",
+    "    Q_A = universal_initialize_q_table(env)\n",
+    "    Q_B = universal_initialize_q_table(env)\n",
     "    Q_A_minus_1, Q_B_minus_1 = np.copy(Q_A), np.copy(Q_B)\n",
     "\n",
     "    N_A = np.zeros((state_space, action_space))\n",
     "    N_B = np.zeros((state_space, action_space))\n",
     "\n",
-    "    rewards = []\n",
-    "    lengths = []\n",
-    "    steps = []\n",
+    "    rewards, lengths, epsilons = [], [], []\n",
     "\n",
     "    k_A = k_B = 0\n",
     "    alpha_A = alpha_B = 1\n",
     "\n",
-    "    state = env.reset()[0]\n",
+    "    state = env.reset(options={'start_loc':0, 'goal_loc':15})[0]\n",
     "    t = 0\n",
     "\n",
-    "\n",
-    "    # Create a mask that is True for rows we want to consider\n",
-    "    mask = np.ones(len(N_A), dtype=bool)\n",
-    "    mask[hole_indeces] = False\n",
-    "\n",
+    "    # hole_indeces = [19,29,35,41,42,46,49,52,54,59]\n",
+    "    hole_indeces = [5,7,11,12]\n",
     "    first = True\n",
     "    while t <= T:\n",
     "        if np.random.rand() < epsilon:\n",
@@ -1763,29 +1768,30 @@
     "        state = next_state\n",
     "\n",
     "        # Update counters and learning rates if needed\n",
-    "        if np.min(N_A[mask]) > 0:\n",
+    "        if np.min(N_A[hole_indeces]) > 0:\n",
     "            k_A += 1\n",
     "            alpha_A = 1 / (k_A + 1)\n",
     "            N_A.fill(0)  # Reset visit counts for A\n",
-    "        if np.min(N_B[mask]) > 0:\n",
+    "        if np.min(N_B[hole_indeces]) > 0:\n",
     "            k_B += 1\n",
     "            alpha_B = 1 / (k_B + 1)\n",
     "            N_B.fill(0)  # Reset visit counts for B\n",
     "\n",
-    "        if (t + 1) % eval_interval == 0:\n",
-    "            avg_reward, avg_length = evaluate_policy(env, (Q_A + Q_B) / 2, eval_episodes)\n",
-    "            if first and avg_reward:\n",
-    "                first = False\n",
-    "                print(\"The first total_time_steps reached to 1 is \", t)\n",
-    "                print(\"The length is  \", avg_length) \n",
-    "            evaluation_rewards.append(avg_reward)\n",
-    "            evaluation_lengths.append(avg_length)\n",
-    "            evaluation_steps.append(t + 1)\n",
-    "            # print(f\"Evaluation at step {t + 1}: Avg Reward = {avg_reward}, Avg Length = {avg_length}\")\n",
     "        epsilon = max(min_epsilon, epsilon * epsilon_decay)  # Reduce epsilon\n",
     "        t += 1\n",
     "        if done:\n",
-    "            state = env.reset()[0]\n",
+    "            state = env.reset(options={'start_loc':0, 'goal_loc':15})[0]\n",
+    "\n",
+    "        if (t + 1) % eval_interval == 0:\n",
+    "            avg_reward, avg_length = evaluate_policy(env, Q_A, eval_episodes)\n",
+    "            if first and avg_reward:\n",
+    "                first = False\n",
+    "                print(f\"Evaluation at step {t + 1}: Avg Reward = {avg_reward}, Avg Length = {avg_length}\")\n",
+    "\n",
+    "            rewards.append(avg_reward)\n",
+    "            lengths.append(avg_length)\n",
+    "            epsilons.append(epsilon)\n",
+    "\n",
     "\n",
     "    return Q_A, rewards, lengths, epsilons\n",
     "\n",
@@ -1822,12 +1828,12 @@
     "\n",
     "    for run in range(num_runs):\n",
     "        print(f\"Training run {run + 1}\")\n",
-    "        q_table, rewards, lengths, epsilons = asynchronous_speedy_q_learning(env, total_time_steps=1000, eval_episodes=1, eval_every=100)\n",
+    "        q_table, rewards, lengths, epsilons = edited_speedy_double_q_learning(env, T=10000, eval_episodes=1, eval_interval=1000)\n",
     "        all_results.append((rewards, lengths, epsilons))\n",
     "\n",
     "    avg_rewards, avg_lengths, avg_epsilons = average_results(all_results, num_evals=len(all_results[0][0]))\n",
     "\n",
-    "    _plot_evaluation(avg_rewards, avg_lengths, avg_epsilons, title=\"SQL SG4x4 (Averaged over 3 runs)\", window_size=5)\n",
+    "    _plot_evaluation(avg_rewards, avg_lengths, avg_epsilons, title=\"SDQL SG4x4 (Averaged over 3 runs)\", window_size=5)\n",
     "    print(\"Final Q-Table:\")\n",
     "    print(q_table)\n"
    ]
